# microvm-orchestrator-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  default.nix  flake.nix  nix_flake_plan.md  pyproject.toml  single_instance.md  test_plan.md
.beads/: issues.jsonl
nix/: vm-config.nix
nix/scripts/: run-claude-task.sh
src/microvm_orchestrator/: __init__.py  __main__.py  cli.py  server.py  tools.py
src/microvm_orchestrator/core/: __init__.py  events.py  git.py  registry.py  slots.py  task.py  vm.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_events.py  test_git.py  test_infrastructure.py  test_integration.py  test_nix_develop.py  test_nix_eval.py  test_registry.py  test_server.py  test_slots.py  test_task.py  test_tools.py  test_vm.py
tests/fixtures/: mocks.py
