[project]
name = "microvm-orchestrator-mcp"
version = "0.1.0"
description = "MCP server for orchestrating parallel tasks in isolated microVMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microvm_orchestrator"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
