[project]
name = "microvm-orchestrator-mcp"
version = "0.1.0"
description = "MCP server for orchestrating parallel tasks in isolated microVMs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
microvm-orchestrator-mcp = "microvm_orchestrator:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microvm_orchestrator"]

[tool.hatch.build.targets.wheel.force-include]
"default.nix" = "microvm_orchestrator/nix/default.nix"
"nix/vm-config.nix" = "microvm_orchestrator/nix/vm-config.nix"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "slow: marks tests as slow (e.g., e2e tests with real VMs)",
]
